feat: access through command line as in Redis